@@ -8,6 +8,9 @@ zeit.content.cp changes
 
 - Layout für Printarchivseiten hinzugefügt.
 
+- ``cp_extra`` Blöcke: Neu im Ressort, Live-Search, Print Archiv, Relateds,
+  Blindblock, Debug
+
 0.11 (2009-08-03)
 -----------------
 
